# agent

./: .gitignore  .gitmodules  README.md  TODO.md  main.py  manage_kb.py  pyproject.toml  requirements.txt  ruff.toml
.claude/rules/: targeted-edit.md
.continue/mcpServers/: new-mcp-server.yaml
.github/instructions/: targeted-edit.instructions.md
chat_cli/: chat_loop.py  commands.py  message_builder.py  renderer.py  runtime_config.py  serialization.py  state.py  text_output.py
config/: config.yaml  config_class.py  sandbox.py
config/char/: default.yaml
config/chat/: default.yaml
config/ekb/: default.yaml
config/llm/: deepseek.yaml  default.yaml
config/log/: default.yaml
config/mcp/: default.yaml
config/mcp_tools/: default.yaml
config/system/: default.yaml
config/tool/: default.yaml
config/work/: default.yaml
doc/: agent_concept.md  embedding_knowledge_base.md  prompt_manager.md
docker/: alt_apt_source.sh  alt_uv_source.sh  requirements.txt  requirements_kb.txt  ubuntu24.dockerfile
graphs/: __init__.py  graph.py  llm.py  routing.py  state.py  tool_policy.py  utils.py
graphs/nodes/: __init__.py  chatbot_node.py  confirm_node.py  tool_node.py
prompt_manager/: __init__.py  builder.py  loader.py  logger.py  preset.py  schema.py
prompt_manager/preset/: __init__.py  injection_assembly.py  reader.py  segments.py
prompt_manager/runtime/: __init__.py  engine.py  events.py  expand.py  filter.py  helpers.py  inject.py  match.py  orchestrator.py  scan.py  session_state.py  sort.py
prompt_manager/types/: __init__.py  common.py  conversation.py  lorebook.py  runtime.py
prompt_manager/utils/: builder.py  front_matter.py  loader.py  logger.py  schema.py
prompts/: main.md
prompts/chars/: architect.md  coding_general.md  main.md
prompts/lorebooks/coding-default/: lorebook.json
prompts/lorebooks/knowledge-graph/: lorebook.json
sandbox/: __init__.py  apple.py  bubblewrap.py  runner.py  sbpl.py
schemas/: lorebook.schema.json
scripts/: build_lorebook.py
shell_scripts/: build_docker.sh  my_agent.sh  start.docker.sh  start.sh  start_mcp.sh
src/zdt_agent/: __init__.py  main.py  manage_kb.py  paths.py
src/zdt_agent/chat_cli/: __init__.py  chat_loop.py  commands.py  (+6 more)
template/: lorebook-item.md
test/: as.py  bug.py  kg.py  main.py  my_mcp.py  test_auto_reject.py  test_cli_commands.py  test_confirm_node.py  test_paths.py  test_preset_integration.py  test_renderer_tool_calls.py  test_sandbox_modes.py  test_tool_call_format.py
test/prompt_manager/: test_lorebook_io_and_schema.py  test_lorebook_runtime.py  test_lorebook_runtime_edges.py  test_multi_lorebook_runtime.py  test_prompt_types.py
tools/: __init__.py  capability.py  embedding_knowledge_base.py  fs_read.py  fs_write.py  layout.py  plan.py  shell.py  todo_list.py
utils/: doc_processor.py  ekb.py  gitignore.py  logger.py  preset.py  regex_pattern_filter.py  singleton_dict.py  vector_db.py  vector_db_base.py  vector_db_chroma.py
(+54 files in other folders)
