[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zdt-agent"
version = "0.1.0"
description = "LangGraph-based agent runtime with MCP integration and prompt manager"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"Flask",
	"flask_cors",
	"langchain_core",
	"langchain",
	"langchain_chroma",
	"langchain_community",
	"langchain_huggingface",
	"langchain-litellm",
	"langchain-text-splitters",
	"langgraph",
	"Markdown",
	"PyYAML",
	"typing_extensions",
	"langchain-mcp-adapters",
	"fastmcp",
	"hydra-core",
	"omegaconf",
	"gnureadline>=8.3.3",
	"neo4j",
	"jsonschema>=4.23.0",
	"tabulate>=0.10.0",
	"litellm>=1.91.0",
]

[project.scripts]
zdt_agent = "zdt_agent.main:main"
zdt_agent_kb = "zdt_agent.manage_kb:main"

[project.optional-dependencies]
ekb = ["sentence-transformers"]

[dependency-groups]
lint = ["black", "pylint", "autoflake"]
ekb = ["sentence-transformers"]
dev = ["pytest", "ruff", "ty", { include-group = "lint" }, { include-group = "ekb" }]

[tool.hatch.build.targets.wheel]
packages = ["src/zdt_agent"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]
